
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 MAR 22a
  * in model/emfield/_Epotential*/emfield.c
    - in write_bdry_emfield_template(), deleted the call to Faces() within the template (obsolete)
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in write_model_fluid_template() and read_model_fluid_actions(), added variable emissivity
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - added functions find_Srad() and find_dSrad_dU()
    - in find_Sstar(), added call to find_Srad()
    - in find_dSstar_dUstar(), added call to find_dSrad_dU()
  * in tools/equilairplasma.c
    - git rid of the option filename
    - now outputs to the screen, not to a file
    - when Tbegin=Tend, changed the output format for better readability
    

2023 MAR 07c
  * in model/thermo/_generic/thermo.c
    - fixed a small error in the molecular weight of C2H
    

2023 MAR 07b
  * renamed
    - _a_from_w_T() to _a_from_w_T_equilibrium()
    - _cp_from_w_T() to _cp_from_w_T_equilibrium()
  * in model/fluid/_*_plasma/fluid.c
    - in _kappan(), call _cp_from_w_T_neutrals_equilibrium() instead of _cp_from_w_T()
    - in find_prim_fluid_mem(), call _cp_from_w_T_neutrals_equilibrium() instead of _cp_from_w_T()
  * in model/thermo/_generic/thermo.c
    - added _cp_from_w_T_equilibrium() and _cp_from_w_T_neutrals_equilibrium()
    - in _a_from_w_T_equilibrium(), changed the call from _cp_from_w_T() to _cp_from_w_T_equilibrium()
      

2023 MAR 07a
  * in model/fluid/_*_plasma/fluid.c
    - renamed kappamem by kappanmem
  * in model/thermo/_thermo.h
    - deleted _cpk_from_T(long spec, double T)
  * in model/transport/_Dixon-Lewis/transport.c
    - in _kappak_from_T(), now calls _cpk_from_T_equilibrium() instead of _cpk_from_T()
  * in src/common.h